# cro-marketplace-f6m4oo

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml
docs/api/: auth.md  cro.md  (+7 more)
src/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
src/backend/app/: __init__.py  main.py
src/backend/app/api/: __init__.py  deps.py
src/backend/app/constants/: __init__.py  document_types.py  error_messages.py  molecule_properties.py  submission_status.py  user_roles.py
src/backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  security.py  settings.py  utils.py
src/backend/app/crud/: __init__.py  base.py  crud_cro_service.py  crud_document.py  crud_library.py  crud_molecule.py  crud_prediction.py  crud_property.py  crud_result.py  crud_user.py
src/backend/app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
src/backend/app/integrations/: __init__.py
src/backend/app/middleware/: __init__.py  audit_middleware.py  auth_middleware.py  cors_middleware.py  error_handlers.py  logging_middleware.py  rate_limiter.py
src/backend/app/models/: __init__.py  audit.py  cro_service.py  document.py  library.py  molecule.py  prediction.py  property.py  result.py  submission.py  user.py
src/backend/app/schemas/: __init__.py  cro_service.py  document.py  library.py  molecule.py  msg.py  prediction.py  property.py  result.py  submission.py  token.py  user.py
src/backend/app/services/: __init__.py  audit_service.py  auth_service.py  cro_service.py  csv_service.py  document_service.py  email_service.py  library_service.py  molecule_service.py  prediction_service.py  result_service.py  storage_service.py  user_service.py
src/backend/app/tasks/: __init__.py  ai_predictions.py  celery_app.py  cleanup.py  csv_processing.py  document_processing.py  notification.py  result_processing.py  worker.py
src/backend/app/utils/: __init__.py  chem_fingerprints.py  csv_parser.py  file_handlers.py  molecular_descriptors.py  pagination.py  rdkit_utils.py  security.py  smiles.py  validators.py
src/backend/scripts/: __init__.py  create_superuser.py  generate_test_data.py  molecule_import.py  precompute_fingerprints.py  seed_db.py
src/backend/tests/: __init__.py  conftest.py  test_main.py
src/backend/tests/api/: __init__.py  test_auth.py  test_cro.py  test_documents.py  test_libraries.py  test_molecules.py  test_predictions.py  test_submissions.py  test_users.py
src/backend/tests/crud/: __init__.py  test_crud_document.py  test_crud_library.py  test_crud_molecule.py  test_crud_submission.py  test_crud_user.py
src/backend/tests/integrations/: __init__.py  test_ai_engine.py  test_aws_s3.py  test_docusign.py
(+326 files in other folders)
